samples/_failures_safe/1761504111_d24070_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a38e6fb.c: In function ‘bfs’:
./samples/SAFE/__tmp_2a38e6fb.c:172:5: error: expected expression at end of input
  172 |     if (
      |     ^~
./samples/SAFE/__tmp_2a38e6fb.c:172:5: error: expected declaration or statement at end of input
